Fix: Correção analise sonar.