@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -31,6 +30,8 @@ public class CompanyService {
 
 	private final AuthService authService;
 
+	private static final String ERROR_NOTFOUND_MESSAGE = "Empresa não encontrada";
+
 	public CompanyService(CompanyRepository repository, AuthService authService) {
 		this.repository = repository;
 		this.authService = authService;
@@ -41,19 +42,19 @@ public class CompanyService {
 		User user = authService.authenticated();
 		LOG.info("Usuário {} buscando empresa com o id {} ", user.getUsername(), user.getCompany().getId());
 		Company entity = repository.findById(user.getCompany().getId())
-				.orElseThrow(() -> new ResourceNotFoundException("Empresa não encontrada"));
+				.orElseThrow(() -> new ResourceNotFoundException(ERROR_NOTFOUND_MESSAGE));
 		LOG.info("Empresa retornada com sucesso {}", entity.getId());
 		return new CompanyDTO(entity);
 	}
 
 	@Transactional
-	public CompanyDTO updateDataByUser(Long id, String name, MultipartFile photo) throws IOException {
+	public CompanyDTO updateDataByUser(Long id, String name, MultipartFile photo) {
 		LOG.info("Tentando atualizar nome e foto da empresa {} ", id);
 		if (!ALLOWED_FILE_TYPES.contains(photo.getContentType())) {
 			throw new IllegalArgumentException("Tipo de arquivo inválido Somente JPEG e PNG são permitidos.");
 		}
 		Optional<Company> obj = repository.findById(id);
-		Company company = obj.orElseThrow(() -> new ResourceNotFoundException("Empresa não encontrada."));
+		Company company = obj.orElseThrow(() -> new ResourceNotFoundException(ERROR_NOTFOUND_MESSAGE));
 		updateData(company, name, photo);
 		company = repository.save(company);
 		LOG.info("Foto e nome da empresa {} atualizada com sucesso.", id);
@@ -66,9 +67,8 @@ public class CompanyService {
 		LOG.info("Usuário {} buscando usuários da empresa {}", authenticatedUser.getUsername(),
 				authenticatedUser.getCompany().getId());
 		Company entity = repository.findById(authenticatedUser.getCompany().getId())
-				.orElseThrow(() -> new ResourceNotFoundException("Empresa não encontrada"));
-		List<UserDTO> entities = entity.getUsers().stream().filter(x -> x.isStatus()).map(UserDTO::new)
-				.collect(Collectors.toList());
+				.orElseThrow(() -> new ResourceNotFoundException(ERROR_NOTFOUND_MESSAGE));
+		List<UserDTO> entities = entity.getUsers().stream().filter(User::isStatus).map(UserDTO::new).toList();
 
 		LOG.info("Usuários retornados com sucesso.");
 		return entities;
@@ -80,9 +80,8 @@ public class CompanyService {
 		LOG.info("Usuário {} buscando usuários da empresa {}", authenticatedUser.getUsername(),
 				authenticatedUser.getCompany().getId());
 		Company entity = repository.findById(authenticatedUser.getCompany().getId())
-				.orElseThrow(() -> new ResourceNotFoundException("Empresa não encontrada"));
-		List<UserDTO> entities = entity.getUsers().stream().filter(x -> !x.isStatus()).map(UserDTO::new)
-				.collect(Collectors.toList());
+				.orElseThrow(() -> new ResourceNotFoundException(ERROR_NOTFOUND_MESSAGE));
+		List<UserDTO> entities = entity.getUsers().stream().filter(x -> !x.isStatus()).map(UserDTO::new).toList();
 
 		LOG.info("Usuários retornados com sucesso.");
 		return entities;
